--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,5 +1,16 @@
-<% @plans.each do |plan| %>
-  <p><%= link_to plan.name, plan_path(plan) %></p>
-<% end %>
-
+<div class="container">
+  <div class="row">
+    <% @plans.each do |plan| %>
+    <div class="col-xs-12 col-sm-4">
+      <%= link_to plan_path(plan) do %>
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));">
+        <div class="card-description">
+        <h2><%= plan.name %></h2>
+      </div>
+    </div>
+    <% end %>
+    </div>
+  <% end %>
+  </div>
 <%= link_to "New plan", new_plan_path, class: "btn btn-primary" %>
+</div>
