--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Home page</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div id="stripes">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
+<h1>DATARKETING</h1>
