--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,3 +6,6 @@
   <span></span>
 </div>
 <h1>DATARKETING</h1>
+<div class="btn_home">
+  <a href="#" class="btn-medium">Create a media plan</a>
+</div>
