--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,3 +9,11 @@
 <div class="btn_home">
   <a href="#" class="btn-medium">Create a media plan</a>
 </div>
+<div class="row">
+  <div class="col-md-6 home_explain">
+   <h2 class= "text-exlpain">Create your next ad campagne in a second</h2>
+  </div>
+  <div class="col-md-6 home_explain">
+   <h2 class= "text-exlpain">Test</h2>
+  </div>
+</div>
