--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -69,4 +69,16 @@ h1 {
 body{
   background-color: white;
 }
+
+.home_explain{
+  text-align: center;
+}
+h2.text-exlpain{
+  color:#4d73ff;
+  border-bottom: 11px solid rgba(106,216,106,0.6) ;
+  box-shadow: inset 0 -8px 0 rgba(106,216,106,0.55);
+  display: inline-block;
+  font-size: 50px;
+  height: 47px;
+}
 // Specific CSS for your home-page
