suite design home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,9 +11,8 @@
 </div>
 <div class="row">
   <div class="col-md-6 home_explain">
-   <h2 class= "text-exlpain">Create your next ad campagne in a second</h2>
+   <h2> <span class= "text-exlpain">Create your next ads campagne in a second</span></h2>
   </div>
   <div class="col-md-6 home_explain">
-   <h2 class= "text-exlpain">Test</h2>
   </div>
 </div>
