--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -58,6 +58,7 @@ h1 {
   top: 50%;  /* position the top  edge of the element at the middle of the parent */
   left: 50%; /* position the left edge of the element at the middle of the parent */
   transform: translate(-50%, -50%);
+  font-size: 70px;
 }
 
 .btn_home{
@@ -73,12 +74,13 @@ body{
 .home_explain{
   text-align: center;
 }
-h2.text-exlpain{
+h2{
   color:#4d73ff;
-  border-bottom: 11px solid rgba(106,216,106,0.6) ;
-  box-shadow: inset 0 -8px 0 rgba(106,216,106,0.55);
-  display: inline-block;
   font-size: 50px;
-  height: 47px;
+}
+.text-exlpain{
+  box-shadow: inset 0 -25px 0 rgba(106,216,106,0.55);
+  display: inline-block;
+  height: 110px;
 }
 // Specific CSS for your home-page
