--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -1,13 +1,16 @@
 <div class="container">
   <h1><%= @plan.name %></h1>
+  <form action="get">
+    <input type="text" placeholder="Rechercher">
+    <button type="submit" value="">Valider</button>
+  </form>
   <table class="table">
-      <% @publishers.each do |publisher| %>
-      <tr>
-        <td><%= publisher.name %></td>
-        <td><%= publisher.type.name%></td>
-       </tr>
-       <p></p>
-      <% end %>
+    <% @publishers.each do |publisher| %>
+    <tr>
+      <td><%= publisher.name %></td>
+      <td><%= publisher.type.name%></td>
+     </tr>
+    <% end %>
   </table>
 </div>
 
